fixing alignment issue on intro page

--- a/css/intro.css
+++ b/css/intro.css
@@ -12,6 +12,7 @@ body {
 #female {
     /* width: 300px; */
     height: 400px;
+    margin-left: 20px;
 }
 h1 {
     line-height: 1em;
@@ -27,6 +28,7 @@ p {
 #chef-select {
     float: left;
     width: 50%;
+    align: center;
 
 }
 #instructions {
@@ -99,4 +101,9 @@ h2 {
     -webkit-text-stroke-width: 3px;
     margin-bottom: 20px;
     margin-top: 20px;
+}
+#photos-spacer {
+    display: flex;
+    justify-content: center;
+
 }
